<resources>
    <string name="app_name">Reversi</string>
    <string name="msg_inicia">Para jugar clickee donde desea poner la ficha o fuera del tablero si no quiere mover este turno.</string>
    <string name="msg_tablas">La partida queda en tablas. Presione durante mas de 1 segundo para reiniciar.</string>
    <string name="msg_ganador1">Gana: </string>
    <string name="msg_ganador2">!! Presione mas de un segundo para reiniciar.</string>
    <string name="first_button_text">Jugar</string>
    <string name="second_button_text">Ayuda</string>
    <string name="third_button_text">Login</string>
    <string name="fourth_button_text">Puntuaciones</string>
    <string name="fifth_button_text">10 Mejores</string>
    <string name="sixth_button_text">Preferencias</string>
    <string name="preferences">Preferencias</string>
</resources>
